# vidui

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: adr.md  design.md  learnings.md
docs/features/20260619213615-layout/: plan.md  spec.md
docs/features/20260620000259-command-palette/: plan.md  spec.md
docs/features/20260620004905-real-playback/: plan.md  spec-ffmpeg.md  spec.md
docs/features/20260620154106-extended-transport-controls/: plan.md  spec.md
docs/features/20260620173011-bundle-ffmpeg-sidecar/: plan.md  spec.md
docs/features/20260620183707-drag-drop-import/: plan.md  spec.md
docs/features/20260620210138-queue-playback/: plan.md  spec.md
docs/features/20260621134500-fast-playback-start/: plan.md  spec.md
docs/features/20260621160000-hls-instant-playback/: plan.md  spec.md
docs/features/20260621175606-cross-platform-release/: plan.md  spec.md
scripts/: fetch-ffmpeg.sh
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: focus.rs  hls_server.rs  import.rs  lib.rs  media.rs
src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  resizable.tsx  scroll-area.tsx
src/components/workspace/: clamp-rate.ts  command-palette.tsx  content.tsx  drop-overlay.tsx  format-color.ts  format-time.ts  frame-step.ts  mock-data.ts  queue.ts  seek-position.ts  sidebar.tsx  sort-natural.ts  sort-selector.tsx  transport-bar.tsx  video-list.tsx  videos-from-paths.ts  viewport.tsx  workspace-context.tsx  workspace-layout.tsx  workspace.tsx
src/components/workspace/__tests__/: clamp-rate.test.ts  command-palette.test.tsx  content-hover-transport.test.tsx  extended-transport.test.tsx  fixtures.ts  frame-step-behavior.test.tsx  frame-step.test.ts  queue.test.ts  seek-position.test.ts  settings-navigation.test.tsx  sidebar.test.tsx  sort-natural.test.ts  sort-selector.test.tsx  transport-bar.test.tsx  video-list.test.tsx  videos-from-paths.test.ts  viewport-transforms.test.tsx  viewport.test.tsx  (+7 more)
src/lib/: tauri.ts
src/lib/__tests__/: tauri.test.ts
src/lib/shortcuts/: registry.ts  use-action-hotkeys.ts
src/routes/: __root.tsx  index.tsx
src/test/: setup.ts
tests/e2e/: bootstrap.spec.tsx
(+1 files in other folders)
